--- a/antiqua.tex
+++ b/antiqua.tex
@@ -20,6 +20,7 @@ Are you ready for a little \LaTeX{} magic? Type the following into a file named 
 \endinput
 \end{verbatim}
 
+\noindent
 Now simply \textbackslash{}usepackage\{antiqua\}, and your document
 will be typeset in URW Antiqua! Antiqua is little known, but still an
 original creation by Hermann Zapf. Its sans serif counterpart that
