--- a/bera.tex
+++ b/bera.tex
@@ -10,9 +10,11 @@
 \noindent
 {\LARGE 9 Bitstream Vera}\\
 ~\\
-The digital revolution demanded types that looked consistent and readable even when viewed at lower resolutions. This gave rise to a square-looking and widely spaced new family of fonts, of which Bitstream Charter was the first real example. After Charter's success, the Bitstream foundry worked together with the Gnome Foundation to produce Bitstream Vera, a serif font specifically designed for low resolution computer screens. The large x-height and wide, open letters make Vera easy to read even at very small sizes.
+The digital revolution demanded types that looked consistent and readable even when viewed at lower resolutions. This gave rise to a square-looking and widely spaced new family of fonts, of which Bitstream Charter and Adobe Utopia were the first real examples. After Charter's success, the Bitstream foundry worked together with the Gnome Foundation to produce Bitstream Vera, a serif font specifically designed for low resolution computer screens. The large x-height and wide, open letters make Vera easy to read even at very small sizes.
 
-The latest incarnation in the category of ``display serif fonts'' is the DejaVu series of fonts, which have mostly replaced the default Vera in most Linux distributions. If you like this type of font, closely compare the packages \texttt{charter}, \texttt{bera}, and \texttt{dejavu}.
-
+\fontsize{9pt}{1em}
+{\fontfamily{DejaVuSerif-TLF}\selectfont
+The latest incarnation of Vera is the DejaVu font family, which have mostly replaced the default Vera in most Linux distributions. Although Wikipedia states that DejaVu ``maintains the original look and feel'' of Vera, I myself cannot find \emph{any} visual difference between \textbackslash{}usepackage\{bera\} and \textbackslash{}usepackage\{dejavu\}. To illustrate, this paragraph is set in 9pt DejaVu, while the previous paragraph is set in 10pt Vera. Really!
+}
 
 \end{document}
