--- a/boisik.tex
+++ b/boisik.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{microtype}
 \usepackage[OT1]{fontenc}
+\usepackage{librebaskerville}
 \usepackage{boisik}
 \usepackage{mflogo}
 \usepackage[utf8]{inputenc}
@@ -11,14 +12,21 @@
 \noindent
 {\LARGE $10$ Boisik}~\\
 ~\\
-Boisik is without a doubt the ugliest font available in any \LaTeX distribution.
-One look at this paragraph and you'll agree that the last place in this Top 10 is a well-deserved one.
+Boisik is without a doubt the ugliest font available in the \LaTeX{}
+distribution.  One look at this paragraph and you'll agree that the
+last place in this Top 10 is a well-deserved one.
 
-However, Boisik is very much worth mentioning because it has completely been written in the archaic \MF{} system.
-That's right, every parameter of this font is globally adjustable, and every font size has different glyphs.
+However, Boisik is very much worth mentioning because it has
+completely been written in the archaic \MF{} system.  That's right,
+every parameter of this font is globally adjustable, and every font
+size has different glyphs.  Boisik is inspired by the classic 18th
+century {\librebaskerville\small Baskerville}, which is itself
+available with \textbackslash{}usepackage\{librebaskerville\}. Boisik
+can be selected by \textbackslash{}usepackage\{boisik\}.
 
-Boisik is a tribute to the original Computer Modern typeface, and it's ugliness only underwrites the geniousness
-of Knuth's creation.
+Boisik
+is a tribute to the original Computer Modern typeface, and it's
+ugliness only underwrites the geniousness of Knuth's creation.
 
 
 \end{document}
