--- a/lmodern.tex
+++ b/lmodern.tex
@@ -17,7 +17,7 @@
 The users of any \TeX{} system get the Computer Modern typeface by default in
 all their documents.  This idiosyncratic font makes \TeX{} documents
 instantly recognizable to anyone who's ever used this system and instantly
-impresses anyone else with it's timeless design.  It has very high contrast
+impresses anyone else with its timeless design.  It has very high contrast
 between thick and thin elements, very consistent and characteristic
 strokes, and relatively short ascenders and descenders.  Of course, it's
 classified as ``modern''.
