--- a/gyre.tex
+++ b/gyre.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 \usepackage[T1]{fontenc}
-\usepackage{charter}
+\usepackage{tgtermes}
 %\usepackage{helvet}
 %\renewcommand{\familydefault}{\sfdefault}
 \usepackage{microtype}
