--- a/bera.tex
+++ b/bera.tex
@@ -10,7 +10,7 @@
 \noindent
 {\LARGE 9 Bitstream Vera}\\
 ~\\
-The digital revolution demanded types that looked consistent and readable even when viewed at lower resolutions. This gave rise to a square-looking and widely spaced new family of fonts, of which Bitstream Charter and Adobe Utopia were the first real examples. After Charter's success, the Bitstream foundry worked together with the Gnome Foundation to produce Bitstream Vera, a serif font specifically designed for low resolution computer screens. The large x-height and wide, open letters make Vera easy to read even at very small sizes.
+The digital revolution demanded types that looked consistent and readable even when viewed at lower resolutions. This gave rise to a square-looking and widely spaced new category of fonts, of which Bitstream Charter and Adobe Utopia were the first real examples. After Charter's success, the Bitstream foundry worked together with the Gnome Foundation to produce Bitstream Vera, a serif font specifically designed for low resolution computer screens. The large x-height and wide, open letters make Vera easy to read even at very small sizes.
 
 \fontsize{9pt}{1em}
 {\fontfamily{DejaVuSerif-TLF}\selectfont
