fix spelling error

--- a/boisik.tex
+++ b/boisik.tex
@@ -25,7 +25,7 @@ available with \textbackslash{}usepackage\{librebaskerville\}. Boisik
 can be selected by \textbackslash{}usepackage\{boisik\}.
 
 Boisik
-is a tribute to the original Computer Modern typeface, and it's
+is a tribute to the original Computer Modern typeface, and its
 ugliness only underwrites the geniousness of Knuth's creation.
 
 
